# cloud-storage-crawler

./: .gitignore  Makefile  README.md  pyproject.toml
src/cloudcrawler/: s3crawler.py
src/crawler/: s3crawler.py
